# dcr

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  TODO.md  build.rs  check.sh  dcr  dcrup.cmd  dcrup.ps1  dcrup.sh  flake.nix  install.ps1  install.sh  install_bsd.sh  pyproject.toml  rowdin.yml
.github/workflows/: aur.yml  ci.yml  dexoron-packages-index.yml  release.yml  trigger-site-build.yml
docs/: FAQ_ru.md  README.md  README.mdx  README_ru.md  SUMMARY.md  changelog.mdx  contributing.mdx  dcr-toml.md  ide-integration.mdx  index.md  license.mdx  self-update.mdx
docs-crowdin-export/de-DE/docs/: README.mdx.mdx  contributing.mdx.mdx  faq.mdx.mdx  license.mdx.mdx
docs-crowdin-export/de-DE/docs/commands/: system-commands.mdx.mdx
docs-crowdin-export/de-DE/docs/getting-started/: first-steps.mdx.mdx
docs-crowdin-export/de-DE/docs/recipes/: library-project.mdx.mdx
docs-crowdin-export/de-DE/docs/reference/: build-system.mdx.mdx  dcr-toml.mdx.mdx  dependencies.mdx.mdx  platform-support.mdx.mdx  workspaces.mdx.mdx
docs-crowdin-export/de-DE/docs/testing/: running-tests.mdx.mdx
docs-crowdin-export/pl-PL/docs/: README.mdx.mdx  contributing.mdx.mdx
docs-crowdin-export/pl-PL/docs/commands/: build-commands.mdx.mdx
docs-crowdin-export/ru-RU/docs/: README.mdx.mdx  changelog.mdx.mdx  contributing.mdx.mdx  faq.mdx.mdx  ide-integration.mdx.mdx  license.mdx.mdx  self-update.mdx.mdx
docs-crowdin-export/uk-UA/docs/: changelog.mdx.mdx  contributing.mdx.mdx
docs-old/: dcr-toml.md
docs/commands/: build-commands.mdx  dcr-build.md  dcr-clean.md  dcr-fmt.md  dcr-gen.md  dcr-init-new.md  dcr-init-or-new.md  dcr-run.md  dependency-commands.mdx  gen-commands.mdx  global-options.md  project-commands.mdx  quality-commands.mdx  system-commands.mdx
docs/configuration/: build-profiles.md  build-section.md  dcr.toml-overview.md  dependencies-section.md  package-section.md
docs/dependencies-and-build/: compilers-and-linking.md  cross-compilation.md  dependency-format.md  local-dependencies.md  target-directory.md  versioning-and-lock-file.md
docs/getting-started/: build-and-run.md  create-your-first-project.md  first-steps.mdx  installation.md  installation.mdx  project-structure.md
docs/recipes/: library-project.mdx  multi-package-workspace.mdx  os-flat-bin-archive.mdx
docs/reference/: build-profiles.mdx  build-system.mdx  cross-compilation.mdx  dcr-toml.mdx  dependencies.mdx  environment-variables.mdx  platform-support.mdx  workspaces.mdx
docs/reference-and-help/: cli-reference.md  config-reference.md  contributing-and-bug-reports.md  faq.md  flags-and-environment.md  troubleshooting-map.md  workspace-guide.md
docs/ru/: CONTRIBUTING_ru.md  README_ru.md
docs/testing/: running-tests.mdx  test-framework.mdx
man/man1/: dcr-add.1  dcr-build.1  dcr-clean.1  dcr-fmt.1  dcr-gen.1  dcr-init.1  dcr-new.1  dcr-run.1  dcr-setup.1  dcr-test.1  dcr-tree.1  dcr.1
packaging/aur/: README.md
packaging/aur/dcr/: .SRCINFO  PKGBUILD
packaging/snap/: snapcraft.yaml
scripts/: sync-releases-to-gitlab.py
src/: config.rs  main.rs
src/cli/: add.rs  build.rs  clean.rs  flag_update.rs  flags.rs  fmt.rs  gen.rs  help.rs  init.rs  lint.rs  mod.rs  new.rs  run.rs  setup.rs  test.rs  tree.rs
src/core/: build_config.rs  config.rs  deps.rs  mod.rs  registry.rs  runner.rs  workspace.rs
src/core/builder/: asm.rs  clang.rs  common.rs  fasm.rs  gas.rs  gcc.rs  llvm_ir.rs  masm.rs  mod.rs  msvc.rs  nasm.rs  qt.rs  unix_cc.rs
src/core/vcs/: git.rs  mod.rs
src/dcr/: config.py  main.py
src/dcr/cli/: __init__.py  build.py  clean.py  flag_update.py  help.py  init.py  new.py  run.py  update.py
src/dcr/utils/: fs.py  text.py
src/platform/: bsd.rs  linux.rs  macos.rs  mod.rs  posix.rs  windows.rs
src/utils/: build.rs  fs.rs  git.rs  log.rs  mod.rs  text.rs
tests/: cli_basic.rs  cli_build.rs  cli_deps.rs  cli_errors.rs  cli_lint.rs  cli_new.rs  cli_qt.rs  cli_test.rs  cli_workspace.rs
tests/common/: mod.rs
(+36 files in other folders)
