[package]
name = "dcr"
version = "0.7.1"
edition = "2024"
build = "build.rs"
description = "DCR is a utility for managing C/C++ projects in a Cargo-like style."
license = "GPL-3.0-or-later"
repository = "https://github.com/dexoron/dcr"
documentation = "https://dcr.dexoron.su/docs"
homepage = "https://dcr.dexoron.su"

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/dcr-{ target }-{ version }{ bin-suffix }"

[package.metadata.deb]
maintainer = "Dexoron (Bezotechestvo Vladimir) <main@dexoron.su>"
copyright = "2026, Dexoron"
extended-description = """
Cargo-like utility to manage C/C++ projects.
"""
section = "devel"
priority = "optional"
assets = [
    ["target/release/dcr", "usr/bin/dcr", "755"],
    ["man/man1/dcr.1", "usr/share/man/man1/dcr.1", "644"],
    ["man/man1/dcr-add.1", "usr/share/man/man1/dcr-add.1", "644"],
    ["man/man1/dcr-build.1", "usr/share/man/man1/dcr-build.1", "644"],
    ["man/man1/dcr-clean.1", "usr/share/man/man1/dcr-clean.1", "644"],
    ["man/man1/dcr-fmt.1", "usr/share/man/man1/dcr-fmt.1", "644"],
    ["man/man1/dcr-gen.1", "usr/share/man/man1/dcr-gen.1", "644"],
    ["man/man1/dcr-init.1", "usr/share/man/man1/dcr-init.1", "644"],
    ["man/man1/dcr-new.1", "usr/share/man/man1/dcr-new.1", "644"],
    ["man/man1/dcr-run.1", "usr/share/man/man1/dcr-run.1", "644"],
    ["man/man1/dcr-setup.1", "usr/share/man/man1/dcr-setup.1", "644"],
    ["man/man1/dcr-test.1", "usr/share/man/man1/dcr-test.1", "644"],
    ["man/man1/dcr-tree.1", "usr/share/man/man1/dcr-tree.1", "644"],
]

[package.metadata.generate-rpm]
summary = "Cargo-like utility to manage C/C++ projects"
description = """
Cargo-like utility to manage C/C++ projects.
"""

assets = [
    { source = "target/release/dcr", dest = "/usr/bin/dcr", mode = "755" },
    { source = "man/man1/dcr.1", dest = "/usr/share/man/man1/dcr.1", mode = "644" },
    { source = "man/man1/dcr-add.1", dest = "/usr/share/man/man1/dcr-add.1", mode = "644" },
    { source = "man/man1/dcr-build.1", dest = "/usr/share/man/man1/dcr-build.1", mode = "644" },
    { source = "man/man1/dcr-clean.1", dest = "/usr/share/man/man1/dcr-clean.1", mode = "644" },
    { source = "man/man1/dcr-fmt.1", dest = "/usr/share/man/man1/dcr-fmt.1", mode = "644" },
    { source = "man/man1/dcr-gen.1", dest = "/usr/share/man/man1/dcr-gen.1", mode = "644" },
    { source = "man/man1/dcr-init.1", dest = "/usr/share/man/man1/dcr-init.1", mode = "644" },
    { source = "man/man1/dcr-new.1", dest = "/usr/share/man/man1/dcr-new.1", mode = "644" },
    { source = "man/man1/dcr-run.1", dest = "/usr/share/man/man1/dcr-run.1", mode = "644" },
    { source = "man/man1/dcr-setup.1", dest = "/usr/share/man/man1/dcr-setup.1", mode = "644" },
    { source = "man/man1/dcr-test.1", dest = "/usr/share/man/man1/dcr-test.1", mode = "644" },
    { source = "man/man1/dcr-tree.1", dest = "/usr/share/man/man1/dcr-tree.1", mode = "644" },
]

[dependencies]
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
self-replace = "1"
sha2 = "0.10"
toml = "1.0.3"
serde_json = "1"
ctrlc = "3"

[target.'cfg(not(windows))'.dependencies]
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
git2 = { version = "0.20.4", features = ["vendored-libgit2"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true