[project]
name = "dcr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dexoron", email = "probrovova1@gmail.com" }
]
requires-python = ">=3.14.2"
dependencies = []

[project.scripts]
run = "dcr.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
